--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "vue-class-component": "^7.0.2",
     "vue-cli": "^2.9.6",
     "vue-datepicker": "^1.3.0",
+    "vue-mj-daterangepicker": "^0.1.11",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.1.6",
     "vue-simple-search-dropdown": "^1.0.1",
     "vue-toasted": "^1.1.27",
     "vue2-editor": "^2.10.2",
