--- a/package.json
+++ b/package.json
@@ -11,27 +11,36 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@fullcalendar/daygrid": "^5.2.0",
+    "@fullcalendar/vue": "^5.2.0",
+    "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "@types/bootstrap-select": "^1.11.1",
     "@types/vuelidate": "^0.7.7",
     "@vue/cli": "^4.1.2",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.12",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap-vue": "^2.16.0",
     "build": "^0.1.4",
     "core-js": "^3.3.2",
     "fibers": "^4.0.1",
     "hmr": "^0.1.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.27.0",
+    "ng-fullcalendar": "^2.0.3",
     "node-static": "^0.7.11",
     "printd": "^1.4.1",
     "sass": "^1.23.0",
+    "vee-validate": "^3.3.8",
     "vue": "^2.6.10",
     "vue-bootstrap-select": "0.0.1",
     "vue-burger-menu": "^2.0.5",
     "vue-class-component": "^7.0.2",
     "vue-cli": "^2.9.6",
+    "vue-ctk-date-time-picker": "^2.5.0",
     "vue-datepicker": "^1.3.0",
+    "vue-full-calendar": "^2.8.1-0",
+    "vue-hotel-datepicker": "^3.0.10",
     "vue-mj-daterangepicker": "^0.1.11",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.3.4",
