--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-simple-search-dropdown": "^1.0.1",
     "vue-toasted": "^1.1.27",
     "vue2-editor": "^2.10.2",
+    "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
