--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   //  "noImplicitAny": false,
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
